app/skins/FlowBlack/FlowBlack.css
/*
 * Document : Spit Player skin
 * Author : spit
 * Year: 2017
 */

@import url("../Main/Main.css");

* {
    -fx-faint-focus-color: red;
    -fx-focus-color: red;
    -fx-text-base-color: -skin-def-font-color;
    -skin-bgr-color: rgb(0, 0, 0);
    -skin-color-darker: rgba(0,0,0, 0.2);
    -skin-color-lighter: rgba(180,200,255, 0.08);
    -skin-def-font-color-hover: red;
    -skin-def-font-color-transparent: rgba(255,0,0,0.2);
    -skin-def-font-color: rgb(210, 220, 230);
    -skin-def-icon-border-color: rgba(200,200,200, 0.2);
    -skin-pane-color-dragged: rgba(10,15,25, 0.8);
    /*-skin-pane-color: rgba(100,130,180, 0.9);*/
    -skin-pane-color: rgba(5, 5, 5, 0.5);
    -skin-prompt-font-color: rgba(165, 165, 165, 0.4);
    -skin-sel-font-color: rgb(225, 225, 226);
    -skin-value-font-color: red;
    -skin-window-bgr-blur-color: rgba(5,5,5,0.80);
    -skin-window-bgr-color-content-free: rgba(5,5,5, 0.85);
    -skin-window-bgr-color-content-free-blur: rgba(5,5,5, 0.80);
    -skin-window-bgr-color: rgba(20, 20, 20, 1);
}

/* Row height */
* {
    -skin-row-fixed-size: 3em;
    -skin-row-icon-size: 1.5em;
}
.tree-cell > .tree-disclosure-node,
.tree-table-row-cell > .tree-disclosure-node {
    -fx-padding: 1.15em 0.5em 0 0;
}
.menu-item {
    -fx-pref-height: 2em;
}


.window:transparent-on .bgr-image {
    -fx-background-color: rgba(50, 50, 50, 0.2);
}
.overlay-pane {
    -fx-background-color: -skin-window-bgr-color-content-free;
}
.overlay-pane-content {
    -fx-background-color: transparent;
}

/* Add focus effect */
.icon:hover {
    -fx-fill: -fx-focus-color;
}
.accordion .titled-pane:focused > .title > .arrow-button .arrow,
.accordion .titled-pane:focused > .title > .arrow-button .arrow,
.accordion .titled-pane:expanded > .title > .arrow-button .arrow,
.accordion .titled-pane:expanded:focused > .title > .arrow-button .arrow {
    -fx-background-color: -fx-focus-color;
}
.accordion .titled-pane:focused > .title,
.accordion .titled-pane:expanded > .title,
.accordion .titled-pane:expanded:focused > .title {
    -fx-text-fill: -fx-focus-color;
}

/** No icon animation effect */
.icon {
    -glyph-animated: false;
}

.icon:selected Text,
.icon:focused Text,
.icon:hover Text {
    -fx-fill: -skin-def-font-color;
    -fx-effect: null;
}

/* Icon style */
.icon:hover {
    // square style
    // -fx-background-color: linear-gradient(from 100% 0% to 0% 100%, rgba(255,255,255,0.2) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.2) 100%);
    // -fx-background-insets: -5;
    // -fx-border-width: 1;
    // -fx-border-insets: -5;
    // -fx-border-color: linear-gradient(from 0% 0% to 100% 100%, transparent 0%, rgba(255,255,255,0.3) 50%, transparent 100%);

    -fx-background-color: transparent;
    -fx-border-width: 1;
    -fx-border-color: linear-gradient(from 0% 100% to 0% 0%, transparent 20%, rgba(255,255,255,0.3) 50%, transparent 80%);
}
.icon:selected,
.icon:focused,
.icon:selected:hover,
.icon:focused:hover {
    // square style
    // -fx-background-color: linear-gradient(from 100% 0% to 0% 100%, -skin-def-font-color-transparent 0%, transparent 30%, transparent 70%, -skin-def-font-color-transparent 100%);
    // -fx-background-insets: -5;
    // -fx-border-width: 1;
    // -fx-border-insets: -5;
    // -fx-border-color: linear-gradient(from 0% 0% to 100% 100%, transparent 0%, red 50%, transparent 100%);

    -fx-background-color: linear-gradient(from 0% 100% to 0% 0%, transparent 20%, -skin-def-font-color-transparent 50%, transparent 80%);
    -fx-border-width: 1;
    -fx-border-color: linear-gradient(from 0% 100% to 0% 0%, transparent 20%, -skin-def-font-color-hover 50%, transparent 80%);
}
.chain-link {
    -fx-spacing: 0;
}

/* Make text more readable */
.list-cell > LabeledText,
.grid-cell > .label > LabeledText,
.table-cell > LabeledText,
.tree-cell > LabeledText,
.tree-table-cell > LabeledText,
.menu .label .icon Text,
.menu-button .label .icon Text,
.label > LabeledText {
    -fx-effect: dropshadow(one-pass-box, rgba(0,0,0, 0.5), 3,1 , 0,0);
}

.menu .label,
.menu-button .label {
    -fx-effect: null;
}

/* Menu item hover */
.menu-item > * > LabeledText,
.menu-item:focused:disabled > * > LabeledText,
.menu-item > * > .icon Text,
.menu-item:focused:disabled > * > .icon Text,
.menu-item > .label,
.menu-item:focused:disabled > .label {
    -fx-fill: -skin-def-font-color;
    -fx-text-fill: -skin-def-font-color;
}
.menu-item:focused > * > LabeledText,
.menu-item:focused > * > .icon Text,
.menu-item:focused > .label {
    -fx-fill: -skin-def-font-color-hover;
    -fx-text-fill: -skin-def-font-color-hover;
}

/* Add focus glow effect */
.icon:hover Text,
.inode:hover Text,
.onode:hover Text,
.ionode:hover Text,
.inode:highlighted Text,
.onode:highlighted Text,
.ionode:highlighted Text,
.inode:hover,
.onode:hover,
.ionode:hover,
.inode:highlighted,
.onode:highlighted,
.ionode:highlighted,
.iolink:hover,
.iolink:highlighted,
.table-row-cell:played > .indexed-cell:played,
.table-row-cell:played > .indexed-cell:played:selected,
.accordion .titled-pane:focused > .title > .arrow-button .arrow,
.accordion .titled-pane:expanded > .title > .arrow-button .arrow,
.accordion .titled-pane:expanded:focused > .title > .arrow-button .arrow,
.accordion .titled-pane:focused > .title,
.accordion .titled-pane:expanded > .title,
.accordion .titled-pane:expanded:focused > .title {
    -fx-effect: dropshadow(gaussian, -fx-focus-color, 12,0 , 0,0);
}

/* Cooler scroll-bar */
.scroll-bar > .thumb,
.scroll-bar:horizontal > .thumb,
.virtual-flow > .scroll-bar > .thumb,
.virtual-flow > .scroll-bar:horizontal > .thumb,
.text-area > .scroll-pane > .scroll-bar > .thumb,
.text-area > .scroll-pane > .scroll-bar:horizontal > .thumb,
.list-view > .virtual-flow > .scroll-bar > .thumb,
.list-view > .virtual-flow > .scroll-bar:horizontal > .thumb,
.tree-view > .virtual-flow > .scroll-bar > .thumb,
.tree-view > .virtual-flow > .scroll-bar:horizontal > .thumb,
.table-view > .virtual-flow > .scroll-bar > .thumb,
.table-view > .virtual-flow > .scroll-bar:horizontal > .thumb,
.tree-table-view > .virtual-flow > .scroll-bar > .thumb,
.tree-table-view > .virtual-flow > .scroll-bar:horizontal > .thumb {
    -fx-padding: 0;
    -fx-background-color: -skin-def-font-color;
    -fx-background-insets: 0.45em;
    -fx-background-radius: 1em; /* 3px */
    -fx-background-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, -skin-def-font-color 50%, transparent 100%);
}
.scroll-bar > .thumb,
.scroll-bar:vertical > .thumb,
.virtual-flow > .scroll-bar > .thumb,
.virtual-flow > .scroll-bar:vertical > .thumb,
.text-area > .scroll-pane > .scroll-bar > .thumb,
.text-area > .scroll-pane > .scroll-bar:vertical > .thumb,
.list-view > .virtual-flow > .scroll-bar > .thumb,
.list-view > .virtual-flow > .scroll-bar:vertical > .thumb,
.tree-view > .virtual-flow > .scroll-bar > .thumb,
.table-view > .virtual-flow > .scroll-bar > .thumb,
.table-view > .virtual-flow > .scroll-bar:vertical > .thumb,
.tree-table-view > .virtual-flow > .scroll-bar > .thumb,
.tree-table-view > .virtual-flow > .scroll-bar:vertical > .thumb {
    -fx-padding: 0;
    -fx-background-color: -skin-def-font-color;
    -fx-background-insets: 0.45em;
    -fx-background-radius: 0em;
    -fx-background-color: linear-gradient(from 100% 0% to 100% 100%, transparent 0%, -skin-def-font-color 50%, transparent 100%);
}

/* Icon in rows effect */
.cell:selected .icon {
    -fx-fill: -skin-def-font-color;
    -fx-effect: dropshadow(gaussian, -skin-def-font-color-hover, 24,0 , 0,0);
}

/* Played row */
.table-row-cell:played > .indexed-cell,
.table-row-cell:played:selected > .indexed-cell {
    -fx-text-fill: -skin-def-font-color;
}

/* Gradient cell effect - support */
.grid-cell:full-width,
.tree-cell:filled {
    -fx-border-color: transparent;
    -fx-border-width: 2 0 2 0;
}

/* Gradient cell effect - hover */
.list-cell:filled:hover,
.table-row-cell:filled:hover,
.grid-cell:full-width:hover,
.tree-cell:filled:hover,
.tree-table-row-cell:filled:hover {
    -fx-background-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,255,255,0.05) 25%, transparent 70%);
    -fx-border-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
    -fx-border-width: 2 0 2 0;
}

/* Gradient cell effect - focus */
.list-cell:filled:selected,
.table-row-cell:filled:played,
.table-row-cell:filled:selected,
.grid-cell:full-width:selected,
.tree-cell:filled:selected,
.tree-table-row-cell:filled:selected,
.tree-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-cell:filled:selected,
.table-view:focused > .virtual-flow > .clipped-container > .sheet > .table-row-cell:filled:selected,
.tree-table-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-table-row-cell:filled:selected {
    -fx-background-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, -skin-def-font-color-transparent 25%, transparent 70%);
    -fx-border-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, -skin-value-font-color 50%, transparent 100%);
    -fx-border-width: 2 0 2 0;
}
.combo-box > .list-cell,
.combo-box:editable > .list-cell,
.combo-box:hover > .list-cell {
    -fx-border-color: transparent;
}

/* Gradient border effect */
.combo-box-base:hover,
.combo-box-base:editable:hover,
.combo-box-base:showing:hover,
.choice-box:hover,
.choice-box:showing:hover,
.complex-text-field:hover {
    -fx-background-color: transparent-nct;
    -fx-border-width: 1;
    -fx-border-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
}
.complex-text-field:hover {
    -fx-border-insets: -1;
}

.combo-box-base:focused,
.combo-box-base:editable:focused,
.combo-box-base:showing:focused,
.choice-box:focused,
.choice-box:showing:focused,
.text-input:focused,
.text-input:readonly:focused,
.complex-text-field:focus-within,
.complex-text-field:focused {
    -fx-background-color: -skin-color-darker;
    -fx-border-width: 1;
    -fx-border-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
}

